// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YarnProject creates a generic YarnProject 1`] = `
{
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-yarn-project",
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": {
    "a": "b",
  },
  "scripts": undefined,
  "types": undefined,
  "version": "0.0.1",
}
`;

exports[`YarnProject creates a generic YarnProject with Yalc 1`] = `
{
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-yarn-project",
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": {
    "a": "b",
  },
  "scripts": {
    "yalc": "npx yalc publish",
  },
  "types": undefined,
  "version": "0.0.1",
}
`;
